c3/post_thinking
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/post_thinking/src/utils.c:1091:14: error: passing 'char [296]' to parameter of incompatible type 'move_s'
comp_to_san( str, *v6); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/post_thinking/src/utils.c:116:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[])
                         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/post_thinking/src/utils.c:1114:12: error: expected expression
*( _OWORD *)v12 = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/post_thinking/src/utils.c:1114:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v12 = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/post_thinking/src/obj/utils.o] Error 1
